global alignment fix for all windows.

--- a/src/sass/browser.scss
+++ b/src/sass/browser.scss
@@ -34,7 +34,7 @@
 
 // All Windows
 .ua-windows_nt {
-    .columns .conversation .selection input[type="checkbox"] {
+    #conversation-list-columns .conversation .selection input[type="checkbox"] {
         position: relative;
         top: 2px;
     }
